--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,14 @@
-fastapi
-uvicorn[standard]
-python-dotenv
-sqlalchemy
-alembic
-psycopg2-binary
-python-jose[cryptography]
-passlib[bcrypt]
-redis
-aioredis
-pydantic
-google-cloud-bigquery
-google-cloud-aiplatform
-google-auth
-httpx
-pandas
-python-multipart
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+python-dotenv==1.0.1
+pydantic==2.9.2
+SQLAlchemy==2.0.35
+psycopg2-binary==2.9.9
+alembic==1.13.2
+passlib[bcrypt]==1.7.4
+python-jose==3.3.0
+google-cloud-bigquery==3.25.0
+google-cloud-aiplatform==1.66.0
+vertexai==1.66.0
+orjson==3.10.7
+pydantic[email]
